--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,12 +13,12 @@
     </div>
     <form [formGroup]="contactForm" (ngSubmit)="postData();">
         <div class="row">
-            <!-- <div class="col">
+            <div class="col">
                 <label>First Name</label>
                 <input type="text" class="form-control" formControlName="fnameFeild">
                 <small *ngIf="contactForm.get('fnameFeild')!.hasError('pattern')">Enter
                     only Alphabets. Digits,Special Symbols are not allowed.</small>
-            </div> -->
+            </div>
             <div class="col">
                 <label>Last Name</label>
                 <input type="text" class="form-control" formControlName="lnameFeild">
