--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,8 +8,8 @@
         </div>
     </div>
     <div class="contact_information">
-        <h5>Contact Information</h5>
-        <h6>Please fill out your contact information below</h6>
+        <!-- <h5>Contact Information</h5> -->
+        <!-- <h6>Please fill out your contact information below</h6> -->
     </div>
     <form [formGroup]="contactForm" (ngSubmit)="postData();">
         <div class="row">
